2007-09-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockbook.[ch]: when DND-hovering > 500ms over a
	notebook tab, switch to that tab's page. Suggested by Saul Goode.

2007-09-17  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_proof.c: use a GimpColorProfileComboBox for
	profile selection.

2007-09-17  Simon Budig  <simon@gimp.org>

	* plug-ins/common/decompose.c: flush the displays at the end.

	Fixes bug #477008.

2007-09-17  Simon Budig  <simon@gimp.org>

	* app/display/gimpdisplayshell-render.c: avoid rendering
	issues by adding xdelta/2 to xstart.

	Probably fixes bug #474509.

2007-09-15  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/layer.pdb: added gimp-layer-flatten.
	Fixes bug #477026. Fixed docs of gimp-layer-add-alpha.

	* app/pdb/internal_procs.c
	* app/pdb/layer_cmds.c
	* libgimp/gimplayer_pdb.[ch]: regenerated.
	* libgimp/gimp.def: changed accordingly.

2007-09-15  Michael Natterer  <mitch@gimp.org>

	Make layer masks work consistently on layers without alpha.
	Fixes bug #475548.

	* app/core/gimplayer.c (gimp_layer_apply_mask): changed to work
	on layers without alpha.

	* app/actions/layers-commands.c (layers_add_mask_response): don't
	automatically add an alpha channel when adding a layer mask.

2007-09-14  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpdatafiles.c: move private functions to the end
	of the file. Added function is_hidden() and use it in
	gimp_datafiles_read_directories(). Moved variables to local
	scopes.

2007-09-14  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_recent_list_add_uri): use the
	untranslated application name. Specify the group "Graphics".

2007-09-14  Sven Neumann  <sven@gimp.org>

	* app/base/tile-pyramid.c: formatting.

	* app/display/gimpdisplayshell-render.c: removed unused include.

2007-09-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/lava.scm: Removed 'from-selection'.
	Reset active layer after calling gimp-selection-save. Modified